# Xposed_inlineHook_64_32

./: README.md  local.properties  thumb指令集解释
app/: build.gradle
app/src/androidTest/java/com/wizd/xposedinlinehook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  const.h  hooktest.cpp  hooktest.h  native-lib.cpp
app/src/main/cpp/antiXposed/: classloader.cpp  logging.cpp  logging.h  plt.cpp  plt.h  xposed-detector.cpp  xposed.cpp  xposed.h
app/src/main/cpp/dvm/: anti_get_dex_so_feild_id.cpp  anti_get_upload_feild_id.cpp  anti_root.cpp  anti_xposed.cpp  dvm.cpp  dvm.h  dvm_getuid.cpp
app/src/main/cpp/inlinehook32/: hooktest32.cpp  hooktest32.h  inlineHook.c  inlineHook.h  relocate.c  relocate.h
app/src/main/cpp/inlinehook64/: And64InlineHook.cpp  And64InlineHook.hpp  hook_main.cpp  hooktest64.h
app/src/main/java/com/system/installer/acc/: HuaweiLoader.java  JNI.java  MainActivity.java
app/src/main/java/com/system/installer/acc/impl/: DownloadJavaImpl.java  NativeImpl.java  PmsBinderHandler.java  ServiceManagerWraper.java
app/src/main/java/com/system/installer/acc/location/: GPSHook.java  LocationHook.java
app/src/main/java/com/system/installer/acc/reflect/: CustomApplication.java  HuaweiLoader.java
app/src/main/java/com/system/installer/acc/system/: MainLogic.java
app/src/main/java/com/system/installer/acc/utils/: DumpParams.java  Hooks.java  Utils.java
app/src/main/java/com/wizd/xposedinlinehook/: HookClass.java
app/src/main/java/com/wizd/xposedinlinehook/imp/: HookJavaImpl.java  HookLoader.java  HookNativeImpl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wizd/xposedinlinehook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
